compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__negative_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1:size(-1)>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<1:size(-1)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

function go() {
  return toBitArray([sizedInt(1, -1, true)]);
}
