compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__negative_size_constant_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x: Int) {\n  <<1:size(-1)>>\n}\n"
---
----- SOURCE CODE

fn go(x: Int) {
  <<1:size(-1)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

function go(x) {
  return toBitArray([]);
}
