compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__not_byte_aligned_explicit_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:size(4)>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256:size(4)>>
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/javascript/error.gleam:3:5
  │
3 │   <<256:size(4)>>
  │     ^^^^^^^^^^^

Non byte aligned array is not supported for JavaScript compilation.
