compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__operator_in_size_for_bit_array_segment.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:bits-size(4 + 1)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits-size(4 + 1)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  return toBitArray([bitArraySlice(x, 0, 4 + 1)]);
}
